Alterando index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ PWA - Progressive Web Apps
 				-->
             <section>
                 <section>
-                    <h1>Web Apps</h1>
+                    <h1>Meetup - Pederneiras / Junho</h1>
                     <h3>Da web ao híbrido</h3>
                     <div class="left-show">
                     </div>
